base/monitoring/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute-internal
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.my-homelab.party`)
      kind: Rule
      middlewares:
        - name: local-only
          namespace: infra
      services:
        - name: grafana
          port: 80
    - match: Host(`prometheus.my-homelab.party`)
      kind: Rule
      middlewares:
        - name: local-only
          namespace: infra
        - name: homelab-auth
          namespace: infra
      services:
        - name: prometheus-prometheus
          port: 9090
